test/files/neg/quasiquotes_escapes.scala
object Test extends App {
  // todo. fix a bug in scalatest that distorts the backslash
  println(s"foo\qbar")
}